# visionvault-ai

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  package-lock.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: download.py  images.py  search.py  upload.py
backend/app/services/: caption_service.py  embedding_service.py  vector_db.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Footer.tsx  GallerySection.tsx  Navbar.tsx  SearchSection.tsx  UploadSection.tsx
frontend/lib/: api.ts
visionvault-frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
visionvault-frontend/app/: globals.css  layout.tsx  page.tsx
visionvault-frontend/components/: Footer.tsx  Gallery.tsx  HeroSearch.tsx  ImageModal.tsx  Navbar.tsx  SearchResults.tsx  UploadSection.tsx
visionvault-frontend/lib/: api.ts  mock-data.ts  types.ts
