[project]
name = "visionvault-ai"
version = "1.0.0"
description = "AI-powered image intelligence platform — FastAPI backend for Vercel"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Meet Jain" }]
keywords = ["fastapi", "computer-vision", "semantic-search", "chromadb", "openclip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.117.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pillow>=10.4.0",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "open-clip-torch>=2.26.0",
    "chromadb>=0.5.0",
    "numpy>=2.1.0",
    "sentencepiece>=0.2.0",
    "einops>=0.8.0",
    "timm>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/meet-jain14/visionvault-ai"
Repository = "https://github.com/meet-jain14/visionvault-ai"
Issues = "https://github.com/meet-jain14/visionvault-ai/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

# Vercel Python / FastAPI deployment
# https://vercel.com/docs/frameworks/backend/fastapi
[tool.vercel]
entrypoint = "backend.app.main:app"
